linking login with swagger auth
